--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "twbs/bootstrap": "3.3.7",
-        "twig/twig": "^1.35.3"
+        "twig/twig": "^1.35.3",
+        "davechild/textstatistics": "1.*"
     }
 }
